--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/pl.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/pl.json
@@ -511,6 +511,7 @@
       "Alert": "pl_Your session will time-out soon",
       "Default": "pl_The Global A-T Family Data Platform"
     },
+    "TooltipAlt": "Czyje imię i nazwisko mam wpisać?",
     "UserActivities": {
       "ActivityActions": "Działania",
       "ActivityDate": "pl_Created",
