--- a/ddp-workspace/projects/ddp-prion/src/assets/i18n/he.json
+++ b/ddp-workspace/projects/ddp-prion/src/assets/i18n/he.json
@@ -71,15 +71,15 @@
           "nameOfPI": "<a target=\"_blank\" href=\"mailto:bsa35@case.edu\" ><strong>בריאן אפלבי</strong></a>",
           "site": "University Hospitals Cleveland Medical Center, קליבלנד, אוהיו, ארה\"ב",
           "eligibilityRequirements": "אנשים העלולים להיות חולים במחלת פריון ושיש להם מחקר אבחוני אחד לפחות המרמז על המחלה (כגון נוזל המוח והשדרה, סריקת MRI של המוח, או אלקטרואנצפלוגרם, או נשאים א-סימפטומטיים של מחלת פריון, הגורמת למוטציות",
-          "moreInfo":  "למידע נוסף פנו אל פרן ליזמור, 216-464-6203, fml2@case.edu."
+          "moreInfo": "למידע נוסף פנו אל פרן ליזמור, 216-464-6203, fml2@case.edu."
         },
         {
           "studyName": "סמנים ביולוגיים בנשאי מוטציות טרום סימפטומטיים",
-          "description":"המטרה שלנו היא להניח את היסודות לבחינת טיפולים עתידיים למחלת פריון באנשים הנמצאים בסיכון למחלת פריון גנטית -- לפני שהם מתחילים לחוות סימפטומים. המתנדבים הפוטנציאליים ישוחחו תחילה בטלפון עם צוות המחקר כדי לענות על שאלות, לאשר את התאמתם, ולאסוף מידע בסיסי אחר. עבור אנשים מתאימים המחליטים להשתתף, המחקר כולל שני ביקורים בבית החולים Massachusetts General Hospital בבוסטון, מסצ'וסטס, עם מרווח זמן של 8-16 שבועות בין הביקורים. ביקורי המחקר יכללו את הרכיבים הבאים, שיבוצעו על פני 1.5 ימים: בדיקה גופנית שגרתית, שאלוני בריאות, ניקור מותני, נטילת דם, סריקות הדמיית מוח, בדיקות קוגניטיביות. משתתפים מתאימים יקבלו תגמול ותמיכה כלכלית הכוללת עלויות נסיעה. כל השתתפות היא על בסיס התנדבותי לחלוטין.",
+          "description": "המטרה שלנו היא להניח את היסודות לבחינת טיפולים עתידיים למחלת פריון באנשים הנמצאים בסיכון למחלת פריון גנטית -- לפני שהם מתחילים לחוות סימפטומים. המתנדבים הפוטנציאליים ישוחחו תחילה בטלפון עם צוות המחקר כדי לענות על שאלות, לאשר את התאמתם, ולאסוף מידע בסיסי אחר. עבור אנשים מתאימים המחליטים להשתתף, המחקר כולל שני ביקורים בבית החולים Massachusetts General Hospital בבוסטון, מסצ'וסטס, עם מרווח זמן של 8-16 שבועות בין הביקורים. ביקורי המחקר יכללו את הרכיבים הבאים, שיבוצעו על פני 1.5 ימים: בדיקה גופנית שגרתית, שאלוני בריאות, ניקור מותני, נטילת דם, סריקות הדמיית מוח, בדיקות קוגניטיביות. משתתפים מתאימים יקבלו תגמול ותמיכה כלכלית הכוללת עלויות נסיעה. כל השתתפות היא על בסיס התנדבותי לחלוטין.",
           "nameOfPI": "<a target=\"_blank\" href=\"mailto:searnold@mgh.harvard.edu\" ><strong>סטיבן ארנולד</strong></a>",
           "site": "<br/>General Hospital, בוסטון,<br/> מסצ'וסטס, ארה\"ב",
           "eligibilityRequirements": "אתם עשויים להתאים למחקר זה אם אחד מהדברים הבאים חל לגביכם: <br/><ol><li> יש לכם היסטוריה משפחתית של מחלת פריון גנטית, כולל מחלת קרויצפלד-יעקב גנטית (CJD), חוסר שינה תורשתי קטלני (FFI), או תסמונת גרסטמן-שטראוסלר-שיינקר (GSS). הערה: אינכם צריכים לדעת את הסטטוס הגנטי שלכם כדי להשתתף.</li><li> קיבלתם בדיקות מנבאות המראות כי אתם נמצאים בסיכון לאחת מהמחלות הנ\"ל.</li><li> אתם מגיעים ממשפחה בה יש מחלת פריון גנטית, למרות שאתם עצמכם אינכם בסיכון</li><li> אתם רוצים להתנדב לקבוצת הביקורת</li></ol>בנוסף, על המשתתפים להיות:<dl ><dt>- בין הגילאים 18-85</dt><dt>- דוברי אנגלית שוטפת</dt></dl>",
-          "moreInfo":  "ראו <a target=\"_blank\" href=\"{{bucketUrl}}/studies/arnold-2017P000214-flyer.pdf\">PDF</a>, צרו קשר עם MGHPrionStudy@partners.org או התקשרו אל 617-643-2351 כדי להירשם"
+          "moreInfo": "ראו <a target=\"_blank\" href=\"{{bucketUrl}}/studies/arnold-2017P000214-flyer.pdf\">PDF</a>, צרו קשר עם MGHPrionStudy@partners.org או התקשרו אל 617-643-2351 כדי להירשם"
         },
         {
           "studyName": "אבחון מוקדם של מחלת פריון בבני אדם",
@@ -87,7 +87,7 @@
           "nameOfPI": "<a target=\"_blank\" href=\"mailto:mgeschwind@memory.ucsf.edu\" ><strong>מיכאל גשווינד </strong></a>",
           "site": "Memory and Aging Center, University of California San Francisco (UCSF), סן פרנסיסקו, קליפורניה, ארה\"ב",
           "eligibilityRequirements": "קריטריונים להכללה: על המטופלים להיות בני 18 ומעלה. עליהם לעמוד בקריטריונים החדשים של ארגון הבריאות העולמי ל-CJD, להיות בעלי היסטוריה משפחתית של מחלת פריון תורשתית בבני אדם, או היסטוריה של התדרדרות נוירולוגית מחמירה הגורמת לדמנציה או לליקוי תפקודי משמעותי, מנקודת הבסיס של המטופל לאורך שנתיים או פחות מתאריך הופעת התסמינים. עליהם לדאוג למודיע שיימצא בקשר קבוע עם הנבדק ויוכל לספק מידע על הנבדק. קריטריוני אי-הכללה: לא מסוגלים לעבור בדיקת MRI עקב התוויית נגד להליך זה (כגון קוצב לב, נשים בהריון). מטופלים עם HIV חיובי ידוע או מדוכאי חיסון.",
-          "moreInfo":  "ראו <a target=\"_blank\" href=\"{{bucketUrl}}/studies/geschwind-10-04905-consent.pdf\">PDF</a>, צרו קשר עם אילי גולוביאטניקוב בטלפון מספר 415-476-2901 Aili.Golubjatnikov@ucsf.edu כדי להירשם"
+          "moreInfo": "ראו <a target=\"_blank\" href=\"{{bucketUrl}}/studies/geschwind-10-04905-consent.pdf\">PDF</a>, צרו קשר עם אילי גולוביאטניקוב בטלפון מספר 415-476-2901 Aili.Golubjatnikov@ucsf.edu כדי להירשם"
         },
         {
           "studyName": "תוכנית הערכה טלנוירולוגית עבור CJD‏ (TAPCJD)",
@@ -95,7 +95,7 @@
           "nameOfPI": "<a target=\"_blank\" href=\"mailto:bsa35@case.edu\" ><strong>בריאן אפלבי</strong></a>",
           "site": "University Hospitals Cleveland Medical Center, קליבלנד, אוהיו, ארה\"ב",
           "eligibilityRequirements": "אנשים העלולים להיות חולים במחלת פריון ויש להם מחקר אבחוני אחד לפחות המרמז על המחלה (כגון נוזל המוח והשדרה, סריקת MRI של המוח, או אלקטרואנצפלוגרם",
-          "moreInfo":  "למידע נוסף צרו קשר עם  CJD Foundation, 800-659-1991, lori@cjdfoundation.org."
+          "moreInfo": "למידע נוסף צרו קשר עם  CJD Foundation, 800-659-1991, lori@cjdfoundation.org."
         },
         {
           "studyName": "נוגדנים טיפוליים נגד מחלות פריון מנשאי מוטציית PRNP",
@@ -103,7 +103,7 @@
           "nameOfPI": "<a target=\"_blank\" href=\"mailto:adriano.aguzzi@usz.ch\"><strong>אדריאנו אגוזי</strong></a>",
           "site": "University of Zurich, Institute of Neuropathology, ציריך, שווייץ",
           "eligibilityRequirements": "נשאי מוטציית PRNP מאומתים (סימפטומטיים + א-סימפטומטיים), ממשפחות עם מוטציות PRNP ללא סטטוס PRNP ידוע, בני משפחה עם PRNP מסוג wild-type מחולים עם מוטציות PRNP מאומתות",
-          "moreInfo":  "ראו <a target=\"_blank\" href=\"{{bucketUrl}}/studies/aguzzi-KEK-ZH-Nr-2015-0514-leaflet.pdf\">PDF</a>, צרו קשר עם קרל פרונטזק  Karl.Frontzek@usz.ch כדי להירשם"
+          "moreInfo": "ראו <a target=\"_blank\" href=\"{{bucketUrl}}/studies/aguzzi-KEK-ZH-Nr-2015-0514-leaflet.pdf\">PDF</a>, צרו קשר עם קרל פרונטזק  Karl.Frontzek@usz.ch כדי להירשם"
         }
       ],
       "InputPlaceholder": "מיין את כל הטורים"
@@ -402,7 +402,6 @@
           "P2": "תחילה, אנו אוספים מידע מסוים מכם",
           "P3Underline": " כאשר אתם מספקים לנו אותו ישירות. ",
           "P4": "באופן ספציפי, אנו אוספים מידע עליכם כאשר אתם:",
-
           "P5Underline": "יוצרים חשבון ופרופיל Prion Registry",
           "P6": " באמצעות אתר האינטרנט שלנו.",
           "P7Underline": "מצטרפים למאגר הרישום ",
@@ -411,9 +410,7 @@
           "P10": ", סקרים והודעות אחרות שאנו עשויים לשלוח לכם.",
           "P11Underline": " מתקשרים איתנו",
           "P12": " (כגון באמצעות הדוא\"ל).",
-
           "P13": "שנית, כאשר אתם נכנסים למאגר הרישום, אנו אוספים מידע באמצעות טכנולוגיות אוטומטיות מסוימות היוצרות ורושמות מידע באופן אוטומטי. לדוגמה:",
-
           "P14": "כאשר אתם מבקרים באתר האינטרנט של מאגר הרישום (בין אם באמצעות המחשב או המכשיר הנייד שלכם), אנו אוספים מידע מסוים באופן אוטומטי ומאחסנים אותו בקובצי יומן רישום. מידע זה עשוי לכלול כתובות IP, ספק שירותי האינטרנט, דפי יציאה/הפניה, חותמות זמן/שעה, נתוני זרם קליקים, זמני התחברות/התנתקות ומשך זמן השהיה במאגר הרישום. ",
           "P15": "אנו משתמשים בקובצי cookie (קובצי טקסט קטנים הנשלחים על ידי המחשב שלכם בכל פעם שאתם מבקרים במאגר הרישום והם ייחודיים לחשבון או לדפדפן שלכם) למגוון מטרות, כולל כדי לעזור לנו להבין באיזו תדירות אתם משתמש במאגר הרישום, מהיכן אתם נכנסים למאגר המחקר ועל אירועים המתרחשים במאגר הרישום. אנו משתמשים בשילוב של כלים ושירותים כגון Google Analytics ו-MixPanel כדי להעריך ולשפר את מאגר הרישום שלנו.   אנו עשויים גם להשתמש בטכנולוגיות מעקב של צד שלישי כדי לזהות קוד זדוני או מתקפות על מאגר הרישום שלנו.  גופים אלה עשויים להשתמש בקובצי cookie ובטכנולוגיות מעקב אחרות כדי לבצע את השירותים שלהם."
         }
@@ -424,7 +421,7 @@
           "P1BoldUnderline": "מידע אישי",
           "P2": ": מידע אשר בפני עצמו או בשילוב עם מידע אחר עשוי לשמש כדי לזהות, ליצור קשר או לאתר אתכם באופן מיידי.  לדוגמה: שמכם, המיקוד שלכם, סטטוס ההשתתפות שלכם במחקרים וכתובת הדוא\"ל שלכם, הם מידע אישי שאתם עשויים לספק לנו באמצעות השימוש במאגר הרישום.  אם אתם מספקים מידע אישי של מישהו אחר (לדוגמה, אתם שולחים מידע למאגר הרישום עבור מישהו אחר או מספקים פרטים על היסטוריה רפואית משפחתית שעשויה לזהות בן משפחה) עליכם ליידע אותם, במידת האפשר מבחינת כושר הבנתם, על כך שסיפקתם לנו את המידע.  אנו נשתמש במידע אישי זה בהתאם למדיניות זו ולחוקים החלים בלבד.",
           "P3BoldUnderline": "מידע רפואי ומידע הקשור למחקר",
-          "P4":". השאלון הרפואי במאגר הרישום יבקש מכם מידע על הניסיון שלכם עם מחלת פריון ועל מוכנותכם להשתתף במחקר.",
+          "P4": ". השאלון הרפואי במאגר הרישום יבקש מכם מידע על הניסיון שלכם עם מחלת פריון ועל מוכנותכם להשתתף במחקר.",
           "P5BoldUnderline": "פרטי שימוש במאגר הרישום",
           "P6": ": מידע הקשור לשימוש שלכם במאגר הרישום, כולל הדפים בהם אתם מעיינים, הקישורים עליהם אתם לוחצים ומשך זמן הביקור שלכם במאגר הרישום.",
           "P7BoldUnderline": "פרטי מכשיר",
@@ -795,6 +792,9 @@
         "E.PO_BOX.INTERNATIONAL": "לא ניתן לאמת תא דואר בינלאומי. לתשומת לבכם הודעה זו יכולה להופיע כשגיאה בבקשה שהצליחה."
       }
     },
-    "TooltipAlt": "מידע"
+    "TooltipAlt": "מידע",
+    "Validators": {
+      "DateNavyValidationRule": "[HE] Entered date is invalid"
+    }
   }
 }
