--- a/ddp-workspace/projects/ddp-prion/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-prion/src/assets/i18n/es.json
@@ -794,7 +794,7 @@
     },
     "TooltipAlt": "Información",
     "Validators": {
-      "DateNavyValidationRule": "[HE] Entered date is invalid"
+      "DateNavyValidationRule": "[ES] Entered date is invalid"
     }
   }
 }
