DDP-5365: Implement ActivityDateNavyValidationRule i18n (#377)
* Translate validation message

* Revert

* Fix

* Fix

--- a/ddp-workspace/projects/ddp-prion/src/assets/i18n/zh.json
+++ b/ddp-workspace/projects/ddp-prion/src/assets/i18n/zh.json
@@ -71,15 +71,15 @@
           "nameOfPI": "<a target=\"_blank\" href=\"mailto:bsa35@case.edu\" ><strong>Brian Appleby</strong></a>",
           "site": "大学医院克利夫兰医学中心，美国俄亥俄州克利夫兰",
           "eligibilityRequirements": "疑似患有朊蛋白病并且至少有一项诊断研究（例如：脑脊液、脑部 MRI、脑电图）提示患有该疾病的个体 ，或者携带导致朊蛋白病的突变但未表现疾病症状的个体",
-          "moreInfo":  "要了解更多信息，请联系 Fran Lissemore：216-464-6203 或 fml2@case.edu。"
+          "moreInfo": "要了解更多信息，请联系 Fran Lissemore：216-464-6203 或 fml2@case.edu。"
         },
         {
           "studyName": "症状前突变携带者中的生物标记物研究",
-          "description":"我们的研究对象是遗传性朊蛋白病的风险人群，即在他们表现任何症状之前，通过我们的研究为检验未来的朊蛋白病疗法奠定基础。研究团队首先会与潜在志愿者进行一次电话交流，目的是获得问题的答案、确认资格和收集一些基线信息。对于决定参与研究的合格人员，研究涉及两次访视马萨诸塞州总医院（位于美国马萨诸塞州的波士顿），两次访视的时间间隔为 8-16 周。研究访视包括以下事项，历时 1.5 天完成：常规体检、健康问卷、腰椎穿刺、抽血、脑部成像扫描、认知检查。合格参与者将收到补偿金和旅行费用补助。所有参与严格执行自愿原则。",
+          "description": "我们的研究对象是遗传性朊蛋白病的风险人群，即在他们表现任何症状之前，通过我们的研究为检验未来的朊蛋白病疗法奠定基础。研究团队首先会与潜在志愿者进行一次电话交流，目的是获得问题的答案、确认资格和收集一些基线信息。对于决定参与研究的合格人员，研究涉及两次访视马萨诸塞州总医院（位于美国马萨诸塞州的波士顿），两次访视的时间间隔为 8-16 周。研究访视包括以下事项，历时 1.5 天完成：常规体检、健康问卷、腰椎穿刺、抽血、脑部成像扫描、认知检查。合格参与者将收到补偿金和旅行费用补助。所有参与严格执行自愿原则。",
           "nameOfPI": "<a target=\"_blank\" href=\"mailto:searnold@mgh.harvard.edu\" ><strong>Steven Arnold</strong></a>",
           "site": "马萨诸塞州<br/>总医院，美国马萨诸塞州波士顿市<br/>",
           "eligibilityRequirements": "如果您符合以下任何一项，则表明您可能合格：<br/><ol><li>有遗传性朊蛋白病的家族史，包括遗传性克-雅氏病 (CJD)、致命性家族失眠症 (FFI) 或 GSS 综合征 (GSS)。注：参与此研究时，并不需要知道您的遗传学状态。</li><li> 已经接受预测性检测并提示具有上述疾病的患病风险。</li><li> 来自遗传性朊蛋白病家庭，但本身无风险</li><li>希望作为对照志愿者参与研究</li></ol>除此之外，参与者必须：<dl ><dt>- 年龄在 18-85 岁之间</dt><dt>- 英文流利</dt></dl>",
-          "moreInfo":  "参见 <a target=\"_blank\" href=\"{{bucketUrl}}/studies/arnold-2017P000214-flyer.pdf\">PDF</a>，若要加入，请联系 MGHPrionStudy@partners.org 或者致电 617-643-2351"
+          "moreInfo": "参见 <a target=\"_blank\" href=\"{{bucketUrl}}/studies/arnold-2017P000214-flyer.pdf\">PDF</a>，若要加入，请联系 MGHPrionStudy@partners.org 或者致电 617-643-2351"
         },
         {
           "studyName": "人朊蛋白病的早期诊断研究",
@@ -87,7 +87,7 @@
           "nameOfPI": "<a target=\"_blank\" href=\"mailto:mgeschwind@memory.ucsf.edu\" ><strong>Michael Geschwind </strong></a>",
           "site": "记忆与老化中心，美国加州的加州大学旧金山分校 (UCSF)",
           "eligibilityRequirements": "纳入标准：患者必须年满 18 岁或以上。必须满足 WHO CJD 修订标准，具有家族性人朊蛋白病的家族史，或者，从基线计的两年时间内或从症状刚开始计的更少时间内，患者有进展性神经衰退因而导致了痴呆或严重的功能损伤。必须有一名经常与受试者联系并且能够提供受试者信息的信息员。排除标准：由于存在禁忌（例如：起搏器、孕妇）而不能接受 MRI 检查。已知 HIV 阳性或免疫抑制患者。",
-          "moreInfo":  "参见 <a target=\"_blank\" href=\"{{bucketUrl}}/studies/geschwind-10-04905-consent.pdf\">PDF</a>，若要加入，请联系 Aili Golubjatnikov：415-476-2901 或者 Aili.Golubjatnikov@ucsf.edu"
+          "moreInfo": "参见 <a target=\"_blank\" href=\"{{bucketUrl}}/studies/geschwind-10-04905-consent.pdf\">PDF</a>，若要加入，请联系 Aili Golubjatnikov：415-476-2901 或者 Aili.Golubjatnikov@ucsf.edu"
         },
         {
           "studyName": "CJD 远程神经学评估计划 (TAPCJD)",
@@ -95,7 +95,7 @@
           "nameOfPI": "<a target=\"_blank\" href=\"mailto:bsa35@case.edu\" ><strong>Brian Appleby</strong></a>",
           "site": "大学医院克利夫兰医学中心，美国俄亥俄州克利夫兰",
           "eligibilityRequirements": "疑似患有朊蛋白病并且至少有一项诊断研究（例如：脑脊液、脑部 MRI、脑电图）提示患有该疾病的个体",
-          "moreInfo":  "要了解更多信息，请联系 CJD 基金会：800-659-1991 或者 lori@cjdfoundation.org。"
+          "moreInfo": "要了解更多信息，请联系 CJD 基金会：800-659-1991 或者 lori@cjdfoundation.org。"
         },
         {
           "studyName": "用来自 PRNP 突变携带者的抗体治疗朊蛋白病的研究",
@@ -103,7 +103,7 @@
           "nameOfPI": "<a target=\"_blank\" href=\"mailto:adriano.aguzzi@usz.ch\"><strong>Adriano Aguzzi</strong></a>",
           "site": "神经病理学研究所，瑞士苏黎世大学",
           "eligibilityRequirements": "PRNP 突变确定携带者（症状+非症状），来自有 PRNP 突变携带者的家庭而自身无已知 PRNP 状况的个体，来自 PRNP 突变确定患者的野生型 PRNP 家庭成员",
-          "moreInfo":  "参见 <a target=\"_blank\" href=\"{{bucketUrl}}/studies/aguzzi-KEK-ZH-Nr-2015-0514-leaflet.pdf\">PDF</a>，若要加入，请联系 Karl Frontzek：Karl.Frontzek@usz.ch"
+          "moreInfo": "参见 <a target=\"_blank\" href=\"{{bucketUrl}}/studies/aguzzi-KEK-ZH-Nr-2015-0514-leaflet.pdf\">PDF</a>，若要加入，请联系 Karl Frontzek：Karl.Frontzek@usz.ch"
         }
       ],
       "InputPlaceholder": "筛选所有栏目"
@@ -402,7 +402,6 @@
           "P2": "首先，我们从您那里收集由",
           "P3Underline": "您直接提供给我们的特定信息。",
           "P4": "具体而言，在下列情况下我们会收集您的信息：",
-
           "P5Underline": "您通过我们的网站创建朊蛋白病注册库帐户",
           "P6": "和个人资料。",
           "P7Underline": "通过提供您自身和您的朊蛋白病经历的信息",
@@ -411,9 +410,7 @@
           "P10": "您给予回复。",
           "P11Underline": "与我们的沟通往来",
           "P12": "（例如通过电子邮件）。",
-
           "P13": "其次，当您访问我们的注册库时，我们通过自动创建和记录信息的特定自动化技术来进行信息收集。例如：",
-
           "P14": "当您访问本注册库网站时（不论用个人计算机还是移动设备），我们会自动收集特定的信息，并把它存储在日志文件中。这些信息可能包括 IP 地址、互联网服务提供商、转入/退出页面、日期/时间戳、点击流数据、登录/退出次数、在注册库中停留的时间。",
           "P15": "我们使用 Cookie（您每次访问注册库时，您的计算机发送的您的帐户或浏览器独有的小文本文件）出于若干目的，包括：帮助我们了解您使用注册库的频率，您从何处访问注册库以及您在注册库中发生的事件。我们结合使用各种自动化工具和服务（例如 Google Analytics 和 MixPanel），来评估和改进我们的注册库。我们可能还会采用第三方追踪技术来检测针对本注册库的恶意编码或攻击。上述实体可能会使用 Cookie 和其它追踪技术来实施其服务。"
         }
@@ -424,7 +421,7 @@
           "P1BoldUnderline": "个人信息",
           "P2": "：可以单独使用或者与其它信息一起用于识别、联系您或对您进行定位的信息。例如，您通过使用注册库而提供给我们的您的姓名、邮编、试验参与状态和电子邮箱地址，这些都属于个人信息。如果您提供了其他人的个人信息（例如：您代表另一个人发送信息至注册库时，或者，您提供了家庭医疗详史而某家庭成员可能会被认出时），您应该在其心智能力允许的范围内让其知晓您向我们提供了其信息。我们仅依照本隐私政策和适用的法律来使用这些个人信息。",
           "P3BoldUnderline": "医学和研究相关的信息",
-          "P4":"。本注册库中的医学问卷将询问关于您的朊蛋白病经历以及您是否有意愿参与研究的信息。",
+          "P4": "。本注册库中的医学问卷将询问关于您的朊蛋白病经历以及您是否有意愿参与研究的信息。",
           "P5BoldUnderline": "注册库使用信息",
           "P6": "：与您使用本注册库相关的信息，包括您浏览的页面、您点击的链接、您在注册库中停留的时间等。",
           "P7BoldUnderline": "设备信息",
@@ -795,6 +792,9 @@
         "E.PO_BOX.INTERNATIONAL": "无法验证国际邮政信箱。请注意，这可能会在成功请求后显示为错误。"
       }
     },
-    "TooltipAlt": "信息"
+    "TooltipAlt": "信息",
+    "Validators": {
+      "DateNavyValidationRule": "[ZH] Entered date is invalid"
+    }
   }
 }
