atcp | feeding survey fixes

--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/en.json
@@ -260,6 +260,7 @@
       "Language": "Language",
       "LearnMore": "Learn More",
       "MedicalHistoryQuestionnaire": "Medical History Questionnaire",
+      "FeedingSurvey": "Feeding Survey",
       "MyAccount": "My Account",
       "MyDashboard": "My Dashboard",
       "Next": "Next",
