atcp | fix stay informed success messages

--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/en.json
@@ -635,7 +635,7 @@
       "Text": "You were away for a while, so we logged you out as a security precaution. Please log in again to return to the last page you were on."
     },
     "StayInformed": {
-      "Text": "Thank you for joining the email list. We'll send you updates and keep you informed. You can unsubscribe at any time. If you have any questions about your status in the project, please email",
+      "Text": "Thanks for joining the Global A-T Family Data Platfom mailing list. We will keep you informed about this initiative by the email address you provided.",
       "Title": "Stay informed"
     }
   },
