--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/pt.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/pt.json
@@ -634,7 +634,7 @@
       "Text": "pt_You were away for a while, so we logged you out as a security precaution. Please log in again to return to the last page you were on."
     },
     "StayInformed": {
-      "Text": "pt_Thank you for joining the email list. We'll send you updates and keep you informed. You can unsubscribe at any time. If you have any questions about your status in the project, please email",
+      "Text": "Obrigado por se associar à lista de discussão da Global A-T Family Data Platfom. Manteremos você informado sobre essa iniciativa usando o endereço de e-mail que você forneceu.",
       "Title": "pt_Stay informed"
     }
   },
