--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/zh.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/zh.json
@@ -639,7 +639,7 @@
       "Text": "zh_You were away for a while, so we logged you out as a security precaution. Please log in again to return to the last page you were on."
     },
     "StayInformed": {
-      "Text": "zh_Thank you for joining the email list. We'll send you updates and keep you informed. You can unsubscribe at any time. If you have any questions about your status in the project, please email",
+      "Text": "感谢您加入全球A-T成员数据平台邮箱列表。 我们将通过您提供的电子邮箱地址通知您这一计划。",
       "Title": "zh_Stay informed"
     }
   },
