--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/de.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/de.json
@@ -634,7 +634,7 @@
       "Text": "de_You were away for a while, so we logged you out as a security precaution. Please log in again to return to the last page you were on."
     },
     "StayInformed": {
-      "Text": "de_Thank you for joining the email list. We'll send you updates and keep you informed. You can unsubscribe at any time. If you have any questions about your status in the project, please email",
+      "Text": "Vielen Dank, dass Sie der Verteilerliste der Plattform für globale Daten von AT-Familien beigetreten sind. Sie erhalten über diese E-Mail-Adresse aktuelle Informationen über diese Initiative.",
       "Title": "de_Stay informed"
     }
   },
