--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/es.json
@@ -634,7 +634,7 @@
       "Text": "es_You were away for a while, so we logged you out as a security precaution. Please log in again to return to the last page you were on."
     },
     "StayInformed": {
-      "Text": "es_Thank you for joining the email list. We'll send you updates and keep you informed. You can unsubscribe at any time. If you have any questions about your status in the project, please email",
+      "Text": "¡Gracias por unirse a la lista de distribución de correo de la Plataforma global de datos para familias con A-T! Lo mantendremos informado sobre esta iniciativa a través de la dirección de correo electrónico que ingresó.",
       "Title": "es_Stay informed"
     }
   },
