--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/fr.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/fr.json
@@ -634,7 +634,7 @@
       "Text": "fr_You were away for a while, so we logged you out as a security precaution. Please log in again to return to the last page you were on."
     },
     "StayInformed": {
-      "Text": "fr_Thank you for joining the email list. We'll send you updates and keep you informed. You can unsubscribe at any time. If you have any questions about your status in the project, please email",
+      "Text": "Merci de vous être inscrit à la liste de diffusion de la plateforme de données internationale sur les familles AT. Nous vous tiendrons informé(e) sur cette initiative grâce à l’adresse e-mail que vous avez fournie.",
       "Title": "fr_Stay informed"
     }
   },
