--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/hi.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/hi.json
@@ -644,7 +644,7 @@
       "Text": "hi_You were away for a while, so we logged you out as a security precaution. Please log in again to return to the last page you were on."
     },
     "StayInformed": {
-      "Text": "hi_Thank you for joining the email list. We'll send you updates and keep you informed. You can unsubscribe at any time. If you have any questions about your status in the project, please email",
+      "Text": "ग्लोबल ए-टी फैमिली डेटा प्लेटफॉर्म मेलिंग सूची में शामिल होने के लिए धन्यवाद। हम आपके द्वारा प्रदान किए गए ईमेल पते के माध्यम से आपको इस पहल के बारे में सूचित करते रहेंगे।",
       "Title": "hi_Stay informed"
     }
   },
