--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/it.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/it.json
@@ -634,7 +634,7 @@
       "Text": "it_You were away for a while, so we logged you out as a security precaution. Please log in again to return to the last page you were on."
     },
     "StayInformed": {
-      "Text": "it_Thank you for joining the email list. We'll send you updates and keep you informed. You can unsubscribe at any time. If you have any questions about your status in the project, please email",
+      "Text": "Grazie per esserti iscritto/a alla mailing list della Piattaforma globale di dati sulle famiglie con A-T. Ti manterremo informato/a su questa iniziativa tramite l'indirizzo di posta elettronica che hai fornito.",
       "Title": "it_Stay informed"
     }
   },
