--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/ja.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/ja.json
@@ -634,7 +634,7 @@
       "Text": "ja_You were away for a while, so we logged you out as a security precaution. Please log in again to return to the last page you were on."
     },
     "StayInformed": {
-      "Text": "ja_Thank you for joining the email list. We'll send you updates and keep you informed. You can unsubscribe at any time. If you have any questions about your status in the project, please email",
+      "Text": "グローバル A-T ファミリーデータプラットフォームメーリングリストへのご参加ありがとうございます。ご指定のEメールアドレスに、このイニシアチブについてのお知らせをお届けします。",
       "Title": "ja_Stay informed"
     }
   },
