--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/pl.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/pl.json
@@ -634,7 +634,7 @@
       "Text": "pl_You were away for a while, so we logged you out as a security precaution. Please log in again to return to the last page you were on."
     },
     "StayInformed": {
-      "Text": "pl_Thank you for joining the email list. We'll send you updates and keep you informed. You can unsubscribe at any time. If you have any questions about your status in the project, please email",
+      "Text": "Dziękujemy za dołączenie do listy mailingowej Ogólnoświatowej Platformy Danych Stowarzyszenia Rodzin z A-T. Będziemy ci przekazywać informacje o tej inicjatywie na podany adres e-mail.",
       "Title": "pl_Stay informed"
     }
   },
