--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/ru.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/ru.json
@@ -634,7 +634,7 @@
       "Text": "ru_You were away for a while, so we logged you out as a security precaution. Please log in again to return to the last page you were on."
     },
     "StayInformed": {
-      "Text": "ru_Thank you for joining the email list. We'll send you updates and keep you informed. You can unsubscribe at any time. If you have any questions about your status in the project, please email",
+      "Text": "Благодарим вас за регистрацию в листе рассылки Глобальной платформы данных о семьях с А-Т. Мы будем информировать вас о нашей программе по указанному вами адресу электронной почты.",
       "Title": "ru_Stay informed"
     }
   },
