--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/tr.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/tr.json
@@ -634,7 +634,7 @@
       "Text": "tr_You were away for a while, so we logged you out as a security precaution. Please log in again to return to the last page you were on."
     },
     "StayInformed": {
-      "Text": "tr_Thank you for joining the email list. We'll send you updates and keep you informed. You can unsubscribe at any time. If you have any questions about your status in the project, please email",
+      "Text": "Global A-T Aile Veri Platformu e-posta listesine katıldığınız için teşekkür ederiz. Sizi verdiğiniz e-posta adresini kullanarak bu girişim konusunda haberdar edeceğiz.",
       "Title": "tr_Stay informed"
     }
   },
