at | implement activity parser

--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/en.json
@@ -451,6 +451,7 @@
     "SignInButton": "Already registered? Sign In here"
   },
   "SDK": {
+    "DownloadButton": "Download Review",
     "CancelButton": "Cancel",
     "CloseButton": "Close",
     "CommunicationError": "There was a problem saving your data. Please check the form and your answers before submitting",
