DDP-5396 allow study admins to edit hidden/read-only activities

--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/en.json
@@ -452,7 +452,8 @@
       "ActivityStatus": "Status",
       "ActivityDate": "Created",
       "ActivityActions": "Actions",
-      "ActivityQuestionCount": "{{questionsAnswered}} of {{questionTotal}} Answered"
+      "ActivityQuestionCount": "{{questionsAnswered}} of {{questionTotal}} Answered",
+      "HiddenTooltip": "This activity is hidden."
     },
     "ManageParticipants": {
       "GovernedParticipants": "Governed participants",
@@ -607,6 +608,10 @@
     "SubjectPanel": {
       "Link": "Return to subject look-up",
       "Text": "Subject Invitation Code: "
+    },
+    "AdminActionPanel": {
+      "ActivityEdit": "Click the Edit button to temporarily unlock for editing. Your edits will be saved as you go. When you click submit or navigate away, the activity will be locked again automatically.",
+      "EditButton": "Edit"
     },
     "Validators": {
       "DateNavyValidationRule": "Entered date is invalid"
