--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ar.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ar.json
@@ -452,7 +452,8 @@
       "ActivityStatus": "الحالة",
       "ActivityDate": "تم الإنشاء",
       "ActivityActions": "الإجراءات",
-      "ActivityQuestionCount": "تمت الإجابة عن {{questionsAnswered}} من {{questionTotal}}"
+      "ActivityQuestionCount": "تمت الإجابة عن {{questionsAnswered}} من {{questionTotal}}",
+      "HiddenTooltip": "This activity is hidden."
     },
     "ManageParticipants": {
       "GovernedParticipants": "المشاركون المنظمون",
@@ -607,6 +608,10 @@
     "SubjectPanel": {
       "Link": "العودة إلى البحث عن مشارك",
       "Text": "رمز الدعوة الخاص بمشترك:"
+    },
+    "AdminActionPanel": {
+      "ActivityEdit": "Click the Edit button to temporarily unlock for editing. Your edits will be saved as you go. When you click submit or navigate away, the activity will be locked again automatically.",
+      "EditButton": "Edit"
     },
     "Validators": {
       "DateNavyValidationRule": "[AR] Entered date is invalid"
