--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/pt.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/pt.json
@@ -452,7 +452,8 @@
       "ActivityStatus": "Estado",
       "ActivityDate": "Criado",
       "ActivityActions": "Ações",
-      "ActivityQuestionCount": "{{questionsAnswered}} de {{questionTotal}} respondidas"
+      "ActivityQuestionCount": "{{questionsAnswered}} de {{questionTotal}} respondidas",
+      "HiddenTooltip": "This activity is hidden."
     },
     "ManageParticipants": {
       "GovernedParticipants": "Participantes regidos ",
@@ -607,6 +608,10 @@
     "SubjectPanel": {
       "Link": "Voltar a procurar participante",
       "Text": "Código de convite do participante:"
+    },
+    "AdminActionPanel": {
+      "ActivityEdit": "Click the Edit button to temporarily unlock for editing. Your edits will be saved as you go. When you click submit or navigate away, the activity will be locked again automatically.",
+      "EditButton": "Edit"
     },
     "Validators": {
       "DateNavyValidationRule": "[PT] Entered date is invalid"
