--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ru.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ru.json
@@ -452,7 +452,8 @@
       "ActivityStatus": "Статус",
       "ActivityDate": "Создано",
       "ActivityActions": "Действия",
-      "ActivityQuestionCount": "На {{questionsAnswered}} из {{questionTotal}} даны ответы"
+      "ActivityQuestionCount": "На {{questionsAnswered}} из {{questionTotal}} даны ответы",
+      "HiddenTooltip": "This activity is hidden."
     },
     "ManageParticipants": {
       "GovernedParticipants": "Управляемые участники",
@@ -607,6 +608,10 @@
     "SubjectPanel": {
       "Link": "Возврат к поиску субъекта",
       "Text": "Код приглашения субъекта:"
+    },
+    "AdminActionPanel": {
+      "ActivityEdit": "Click the Edit button to temporarily unlock for editing. Your edits will be saved as you go. When you click submit or navigate away, the activity will be locked again automatically.",
+      "EditButton": "Edit"
     },
     "Validators": {
       "DateNavyValidationRule": "Введена некорректная дата"
