--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/vi.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/vi.json
@@ -452,7 +452,8 @@
       "ActivityStatus": "Tình trạng",
       "ActivityDate": "Được tạo ra",
       "ActivityActions": "Hành động",
-      "ActivityQuestionCount": "{{questionsAnswered}} của {{questionTotal}} được trả lời"
+      "ActivityQuestionCount": "{{questionsAnswered}} của {{questionTotal}} được trả lời",
+      "HiddenTooltip": "This activity is hidden."
     },
     "ManageParticipants": {
       "GovernedParticipants": "Người tham gia được kiểm soát",
@@ -607,6 +608,10 @@
     "SubjectPanel": {
       "Link": "Quay về Trang tìm kiếm",
       "Text": "Mã mời:"
+    },
+    "AdminActionPanel": {
+      "ActivityEdit": "Click the Edit button to temporarily unlock for editing. Your edits will be saved as you go. When you click submit or navigate away, the activity will be locked again automatically.",
+      "EditButton": "Edit"
     },
     "Validators": {
       "DateNavyValidationRule": "[VI] Entered date is invalid"
