--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/zh.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/zh.json
@@ -452,7 +452,8 @@
       "ActivityStatus": "状态",
       "ActivityDate": "已创建",
       "ActivityActions": "操作",
-      "ActivityQuestionCount": "已解答 {{questionsAnswered}} 题，共 {{questionTotal}} 题"
+      "ActivityQuestionCount": "已解答 {{questionsAnswered}} 题，共 {{questionTotal}} 题",
+      "HiddenTooltip": "This activity is hidden."
     },
     "ManageParticipants": {
       "GovernedParticipants": "受管参与者",
@@ -607,6 +608,10 @@
     "SubjectPanel": {
       "Link": "返回受试者查找",
       "Text": "受试者邀请代码："
+    },
+    "AdminActionPanel": {
+      "ActivityEdit": "Click the Edit button to temporarily unlock for editing. Your edits will be saved as you go. When you click submit or navigate away, the activity will be locked again automatically.",
+      "EditButton": "Edit"
     },
     "Validators": {
       "DateNavyValidationRule": "[ZH] Entered date is invalid"
